evenframe_derive/tests/ui/fail/struct_unit.rs
use evenframe_derive::Evenframe;

/// Unit struct - Evenframe doesn't support unit structs
#[derive(Evenframe)]
pub struct UnitStruct;

fn main() {}
